# minimaker

./: .gitignore  pyproject.toml
configs/: config.yaml  dpo.yaml  grpo.yaml  sft.yaml
configs/data/: dpo_synthetic.yaml  grpo_synthetic.yaml  openwebtext.yaml  sft_synthetic.yaml  toy.yaml
configs/model/: 3b.yaml  7b.yaml  7b_full.yaml  9b.yaml  large.yaml  medium.yaml  small.yaml  toy.yaml  xl.yaml
configs/training/: debug.yaml  default.yaml  dpo.yaml  grpo.yaml  sft.yaml
scripts/: benchmark.sh  dpo.sh  grpo.sh  prepare_data.sh  sft.sh  train.sh
src/minimaker/: benchmark.py  checkpoint.py  data.py  distributed.py  dpo.py  grpo.py  metrics.py  model.py  rewards.py  rl_data.py  sft.py  sft_data.py  train.py
tests/: test_model.py
